Filtro funcionando y muestra personajes en pantalla. aun no boton y detalles para formato de personaje

--- a/src/style.css
+++ b/src/style.css
@@ -9,3 +9,19 @@
 #pagina3 {
   background-color: #99cccc
 }
+
+#PersonGriffindor{
+  background-color: #33ff99
+}
+
+#PersonHufflepuff{
+  background-color: #33ff99
+}
+
+#PersonRavenclaw{
+  background-color: #33ff99
+}
+
+#PersonSlytherin{
+  background-color: #33ff99
+}
