--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,222 @@
+*{
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+}
+@font-face {
+  font-family:"HARRYP" ;
+  src: url("./HARRYP__.TTF");
+  
+  }  
+
 #pagina1 {
-  background-color:#33cccc
+  background-image: url("img/fondo1.jpg");
+  max-width: 100%;
+  height: 900px;
+  
+   
 }
-
 #pagina2 {
-  background-color:#66ffcc
+  height: 1500px;
+  width: 1280px;
+  background-image: url("img/mapa.jpg");
+  flex-wrap: wrap;
+  display: none;
+
+   
+}
+#pagina3 {
+  height: 1500px;
+  width: 1280px;
+  background-image: url("img/comedor1.jpg");
+  background-repeat: no-repeat;
+  background-size: 1500px;
+  display: none;
+  flex-wrap: wrap;
 }
 
-#pagina3 {
-  background-color: #99cccc
+
+.titlePrincipal{
+  color: rgb(30, 238, 238);
+  font-family:"HARRYP" ;
+  display: flex
+  
+ 
+  
+  }
+  .harrilogo{
+    
+
+  }
+
+.saludoPag1{
+color:wheat;
+font-family: 'Fontdiner Swanky', cursive;
+text-align:center;
+font-size: 25px;
+position: absolute;
+top: 305px;
+left: 120px;
+
+}
+.HedwigPresentacion{
+  color:rgb(250, 250, 246);
+  font-family: 'Fontdiner Swanky', cursive;
+  font-size: 22px;
+  position:relative;
+  top: 350px;
+  left: 380px;
+  
+  
+}
+.inputName{
+
+  border:2px solid rgb(30, 238, 238);
+	font-size:20px;;
+	padding:.25em .5em .3125em;
+	color:rgb(34, 236, 236,.8);
+	border-radius:.25em;
+	background:transparent;
+  transition:all .100s;
+  font-family: 'Fontdiner Swanky', cursive;
+  width: 400px;
+  text-align: center;
+  height: 50px;
+  position: relative;
+  left: 20px;
+	
+}
+.HedwigInstruccion{
+  color: azure;
+  font-family: 'Fontdiner Swanky', cursive;
+  font-size: 20px;
+  position: relative;
+  left: 650px;
+  top: 480px;
+   
+}
+.buttonAlohomora{
+  background-color: rgb(24, 22, 22,0.9);
+  border: 1px solid  rgb(30, 238, 238,0.5);
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  font-size: 36px;
+  margin: 4px 2px;
+  cursor: pointer;
+  font-family:"HARRYP" ;
+  width: 150px;
+  margin-right: 20px;
+      
+}
+button:hover{
+  background:  rgb(30, 238, 238,0.3);
+}
+/*paguina2*/
+.saludopag2{
+  color:greenyellow;
+  font-size: 200px;
+  font-family:"HARRYP" ;
+  font-size: 40px;
+  position: relative;
+  top: 100px;
+  
+  text-align: center;
+}
+.hedwigPag2{
+  color: aqua;
+  font-family: 'Fontdiner Swanky', cursive;
+  font-size: 20px;
+  text-align: center;
+  position: relative;
+  top: 150px;
+}
+.logo{
+  justify-content:center;
+  position: relative;
+  top: 230px;
+  left: 510px;
+  
+}
+.hogwarts{
+  position: relative;
+  top:50px;
+  left:400px;
+ 
+}
+.logo1{
+  justify-content:center;
+  position: relative;
+  top: 220px;
+  left: 360px;
+}
+.patronum{
+  position: relative;
+  left:500px;
+  top:50px; 
+}
+.logo2{
+  justify-content:center;
+  position: relative;
+  top: 200px;
+  left: 510px;
+}
+.varitas{
+  position: relative;
+  left:400px;
+  top: 30px;
+}
+.logo3{
+  justify-content:center;
+  position: relative;
+  top: 200px;
+  left: 360px;
+}
+.sangre{
+  position: relative;
+  left:500px;
+  top:30px;
+}
+.logo4{
+  justify-content:center;
+  position: relative;
+  top: 200px;
+  left:510px;
+}
+.maestros{
+  position: relative;
+  left:400px;
+  top: 30px;
+}
+
+
+article h3{
+  font-family:"HARRYP" ;
+  font-size: 40px;
+  color: beige;
+  }
+.titlepag3{
+  font-family:"HARRYP" ;
+  font-size: 40px;
+  color: aqua;
+  text-align: center;
+}
+.textoPag3{
+  font-family: 'Fontdiner Swanky', cursive;
+  font-size: 15px;
+  color: beige;
+  text-align: center
+}
+.hedwigPag3{
+  font-family:"HARRYP" ;
+  font-size: 40px;
+  color: aqua;
+  text-align: center;
+}
+.articleGriffindor{
+  font-family: 'Fontdiner Swanky', cursive;
+  font-size: 15px;
+  color: beige;
 }
