--- a/src/style.css
+++ b/src/style.css
@@ -6,49 +6,20 @@
 @font-face {
   font-family:"HARRYP" ;
   src: url("./HARRYP__.TTF");
-  
-  }  
-
+}  
 #pagina1 {
-  background-image: url("img/fondo1.jpg");
+  background-image: url("img/fondoPag3.gif");
   max-width: 100%;
   height: 900px;
-  
-   
+ 
 }
-#pagina2 {
-  height: 1500px;
-  width: 1280px;
-  background-image: url("img/mapa.jpg");
-  flex-wrap: wrap;
-  display: none;
-
-   
-}
-#pagina3 {
-  height: 1500px;
-  width: 1280px;
-  background-image: url("img/comedor1.jpg");
-  background-repeat: no-repeat;
-  background-size: 1500px;
-  display: none;
-  flex-wrap: wrap;
-}
-
 
 .titlePrincipal{
   color: rgb(30, 238, 238);
   font-family:"HARRYP" ;
   display: flex
-  
- 
-  
-  }
-  .harrilogo{
-    
-
-  }
-
+   
+}
 .saludoPag1{
 color:wheat;
 font-family: 'Fontdiner Swanky', cursive;
@@ -66,11 +37,9 @@ left: 120px;
   position:relative;
   top: 350px;
   left: 380px;
-  
-  
+   
 }
 .inputName{
-
   border:2px solid rgb(30, 238, 238);
 	font-size:20px;;
 	padding:.25em .5em .3125em;
@@ -115,6 +84,13 @@ button:hover{
   background:  rgb(30, 238, 238,0.3);
 }
 /*paguina2*/
+#pagina2 {
+  height: 1500px;
+  width: 1280px;
+  background-image: url("img/fondoPag3.gif");
+  flex-wrap: wrap;
+  display: none;
+}
 .saludopag2{
   color:greenyellow;
   font-size: 200px;
@@ -122,7 +98,6 @@ button:hover{
   font-size: 40px;
   position: relative;
   top: 100px;
-  
   text-align: center;
 }
 .hedwigPag2{
@@ -144,8 +119,13 @@ button:hover{
   position: relative;
   top:50px;
   left:400px;
- 
 }
+/* article h3 DESCRIPCION  DE LA PAGINA 2 CASAS HOGWATRS,MAETROS,VARITAS ETC*/
+article h3{
+  font-family:"HARRYP" ;
+  font-size: 40px;
+  color: beige;
+  }
 .logo1{
   justify-content:center;
   position: relative;
@@ -191,48 +171,223 @@ button:hover{
   top: 30px;
 }
 
-
-article h3{
-  font-family:"HARRYP" ;
-  font-size: 40px;
-  color: beige;
-  }
-.titlepag3{
-  font-family:"HARRYP" ;
-  font-size: 40px;
-  color: aqua;
-  text-align: center;
+/*PAG3*/
+#pagina3 {
+  width: 100%;
+  display: flex;
+  flex-direction:column;
+  align-content: center;
+  flex-wrap: wrap;
+  background-image: url("img/fondoPag3.gif");
+ 	margin:0%;
+  display:none;
 }
-.textoPag3{
+
+.contenedorTitle{
+  width: 80%;
+  margin-top:8%;
+  margin-left: 10%;
+  text-align:center;
+  font-family:"HARRYP" ;
+  font-size:250%;
+  color: rgb(221, 177, 54);
+  /*background-color: salmon;*/
+    
+}
+.contenedorSnitch{
+  width:90%;
+  /*background-color: aquamarine;*/
+  margin-left: 5%;
+}
+.snitch{
+ transition: all 0.2s;
+ width: 25%;
+    
+}
+.contenedorSnitch:hover .snitch{
+  /*transform:translate(300px);*/
+ -webkit-transform:rotate(360deg);transform: rotate(360deg);
+}
+.contenedorBtn3{
+  display: flex;
+  /*background-color: fuchsia;*/
+  justify-content:flex-end;
+}
+.btnRegresarPag3{
+  width:10%;
+  height: 10%;
+  cursor: pointer;
+
+}
+
+.explicacionDeHogwarts{
+  color: white;
   font-family: 'Fontdiner Swanky', cursive;
-  font-size: 15px;
-  color: beige;
-  text-align: center
+  font-size: 88%;
+  width:80%;
+  height: auto;
+  margin-top: 3%;
+  margin-left: 10%;
+  text-align:justify;
+  /*background-color: aquamarine;*/
+}    
+.imgHogwartsAnimado{
+  float: left;
+  width: 25%;
+  border-radius: 5%;
+      
 }
-.hedwigPag3{
-  font-family:"HARRYP" ;
-  font-size: 40px;
-  color: aqua;
-  text-align: center;
-}
-.articleGriffindor{
+.git_sombreroseleccionador{
   font-family: 'Fontdiner Swanky', cursive;
-  font-size: 15px;
-  color: beige;
+  font-size: 88%;
+  color:white;
+  text-align: justify;
+  width: 80%;
+  margin-top: 3%;
+  margin-left: 10%;
+  /*background-color: salmon;*/
+   
 }
-
-#PersonGriffindor{
-  background-color: #33ff99
+.imgSombreroSeleccionador{
+  float: right;
+  width: 20%;
+  border-radius: 5%;
 }
-
-#PersonHufflepuff{
-  background-color: #33ff99
+.preguntaPag3{
+  color: rgb(231, 194, 26);
+  font-size: 150%;
 }
-
-#PersonRavenclaw{
-  background-color: #33ff99
+.existenPag3{
+  color: rgb(231, 194, 26);
+  font-size: 210%;
 }
-
-#PersonSlytherin{
-  background-color: #33ff99
+.casas_de_hogwarts{
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  justify-content: space-between;
+  overflow:hidden;
+  margin-top: 3%;
+  margin-left: 10%;
+  font-family:"HARRYP" ;
+  color: aliceblue;
+  font-size:200%;
+   
+ }
+.imglogos{
+  border-radius: 200px 200px 200px 200px;
+  border: 1px solid #e0dadaa9;
+  cursor: pointer;
+  
 }
+.imglogos:hover  {
+  -webkit-transform:scale(1.3);transform:scale(1.3);
+}
+.casaGryffindor{
+  text-align: center;
+  margin-top: 3%;
+  margin-left: 10%;
+        
+}
+.casaHufflepuff{
+ text-align:center;
+ margin-top: 3%;
+ margin-left: 10%;
+  
+}
+.casaRavenclaw{
+  text-align: center;
+  margin-top: 3%;
+  margin-left: 10%;
+  
+}
+.casaSlytherin{
+  text-align:center;
+  color:whitesmoke; 
+  margin-top: 3%;
+  margin-left: 10%;
+}
+.span_gryffindor{
+  display: flex;
+	flex-wrap: wrap;
+	align-items: space-between;
+  justify-content: center;
+	margin:3%;
+  max-width: 1200px;
+  
+}
+.element_name{
+  background-color: rgb(182, 22, 22);
+	border-radius: 10px;
+	box-shadow: 0 3px 15px rgba(233, 235, 228, 0.5);
+	margin: 10px;
+	padding: 20px;
+  text-align: center;
+  color: aliceblue;
+} 
+.img_potter{
+  background-color: rgba(192, 51, 51, 0.6);
+	border-radius: 5%;
+	width: 120px;
+	height: 150px;
+	text-align: left;
+}
+/*SE TRANSFORMA A ESCALA */
+.img_potter:hover {
+  -webkit-transform:scale(1.3);transform:scale(1.3);
+}
+.element_name.img_potter img{
+  margin-top: 2px;
+	max-width: 20%;
+}
+.span_hufflepuff{
+  display: flex;
+	flex-wrap: wrap;
+	align-items: space-between;
+  justify-content: center;
+	margin:3%;
+  max-width: 1200px;
+}
+.element_nameH{
+  background-color: rgb(209, 156, 40);
+	border-radius: 10px;
+	box-shadow: 0 3px 15px rgba(233, 235, 228, 0.5);
+	margin: 10px;
+	padding: 20px;
+  text-align: center;
+  color: aliceblue;
+} 
+.span_ravenclaw{
+  display: flex;
+	flex-wrap: wrap;
+	align-items: space-between;
+  justify-content: center;
+	margin:3%;
+  max-width: 1200px;
+}
+.element_nameR{
+  background-color: rgb(25, 129, 155);
+	border-radius: 10px;
+	box-shadow: 0 3px 15px rgba(233, 235, 228, 0.5);
+	margin: 10px;
+	padding: 20px;
+  text-align: center;
+  color: aliceblue;
+} 
+.span_slytherin{
+  display: flex;
+	flex-wrap: wrap;
+	align-items: space-between;
+  justify-content: center;
+	margin:3%;
+  max-width: 1200px;
+}
+.element_nameS{
+  background-color: rgb(8, 70, 5);
+	border-radius: 10px;
+	box-shadow: 0 3px 15px rgba(233, 235, 228, 0.5);
+	margin: 10px;
+	padding: 20px;
+  text-align: center;
+  color: aliceblue;
+} 
