--- a/src/style.css
+++ b/src/style.css
@@ -3,27 +3,212 @@
   padding: 0%;
   box-sizing: border-box;
 }
+
+#pagina1 {
+    background-image: url("img/fondo.gif");
+    background-repeat: repeat;
+    display:flex;
+    /*posibilidad de modificacion*/
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  /*  height: 1024px; para resposibe ipad eliminar flexwrap*/
+
+}
+
+header{
+width:35%;
+height:50%;
+color: #FCEA04;
+font-family:"HARRYP";
+text-align:center;
+font-size: 4em;
+padding-top: 5%;
+display:flex;
+align-items: center;
+flex-direction: column;
+}
+
+
 @font-face {
   font-family:"HARRYP" ;
   src: url("./HARRYP__.TTF");
-  
-  }  
+  }
+  .harrilogo{
+    width:50%;
+    height:50%;
+  }
+#saludoPag1{
+color:#F1F4C2;
+width:90%;
+height:70%;
+font-family: 'Fontdiner Swanky';
+text-align:center;
+font-size: 50%
+align-self: flex-end;
 
-#pagina1 {
-  background-image: url("img/fondo1.jpg");
-  max-width: 100%;
-  height: 900px;
-  
-   
 }
-#pagina2 {
-  height: 1500px;
-  width: 1280px;
-  background-image: url("img/mapa.jpg");
+
+.snich{
+  width:30%;
+  height:30%;
+}
+
+#HedwigPresentacion{
+  color:#efb810;
+  font-family: 'Fontdiner Swanky', cursive;*/
+  width:100%;
+  height:70%;
+  display: flex;
   flex-wrap: wrap;
+}
+#texto{
+  width:50%;
+  height:50%;
+  font-size: 120%;
+  text-align:center;
+}
+
+.inputName{
+
+  border:thin solid rgb(30, 238, 238);
+	font-size:1.5em;;
+	/*padding:10%, 5%;*/
+	color:rgb(34, 236, 236,.8);
+	border-radius:5px;
+	background:transparent;
+  transition:all .100s;
+  font-family: 'Fontdiner Swanky', cursive;
+  width: 45%;
+  height: 50px;
+  align-self: center;
+  text-align: center;
+
+}
+.HedwigInstruccion{
+  color: azure;
+  font-family: 'Fontdiner Swanky', cursive;
+  font-size: 100%;
+  display: flex;
+
+}
+
+.alohomora{
+  width: 100%;
+  height: 50px;
+  display: flex;
+justify-content: center;
+}
+.buttonAlohomora{
+  background-color: rgb(24, 22, 22,0.9);
+  border: 1px solid  rgb(30, 238, 238,0.5);
+  color: white;
+  padding: 2% 1%;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  font-size: 36px;
+  margin: 4px 2px;
+  cursor: pointer;
+  font-family:"HARRYP" ;
+  width: 150px;
+  margin-right: 20px;
+}
+button:hover{
+  background:  rgb(30, 238, 238,0.3);
+}
+
+
+#pagina2 {
+  background-image: url("img/fondo.gif");
+  background-repeat: repeat;
   display: none;
 
-   
+}
+/*paguina2*/
+#contenedor {
+  display:flex;
+  background-color: : #339966;
+  width: 100%;
+  height: 1000px;
+  text-align: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#user{
+  width:100%;
+  color: #FCEA04;
+  font-family:"HARRYP";
+  text-align:center;
+  font-size: 6em;
+  padding-top: 10%;
+  justify-content: center;
+}
+.hedwigPag2{
+  color: #ffffff;
+  width: 50%;
+  font-family: 'Fontdiner Swanky';
+  font-size: 2em;
+  /*align-self: flex-start;
+  text-align: center;*/
+}
+
+#menu{
+  display: flex;
+  width:100%;
+  height:35%;
+  /*justify-content: space-around;/*
+  */align-items: flex-start;*/modificaresto
+}
+#HogwartsyCasas{
+  width:60%;
+  height:60%;
+}
+.hogwarts{
+  top:120%;
+  left:10%;*/
+
+}
+#patronus{
+  width:42%;
+  height:42%;
+}
+.patronum{
+/*  position: relative;
+  left:10%;
+  top:120%;*/
+}
+#varitas{
+  height:85%;
+  width:85%;
+}
+.varitas2{
+  /*position: relative;
+  left:400px;
+  top: 30px;*/
+}
+#linaje{
+  height:80%;
+  width:80%;
+}
+.sangre{
+  /*position: relative;
+  left:500px;
+  top:30px;*/
+}
+#magosmaster{
+/*  align-self: center;
+  position: relative;*/
+  height:60%;
+  width:60%;
+}
+.maestros{
+/*  position: relative;
+  left:400px;
+  top: 5px;*/
 }
 #pagina3 {
   height: 1500px;
@@ -35,167 +220,10 @@
   flex-wrap: wrap;
 }
 
-
-.titlePrincipal{
-  color: rgb(30, 238, 238);
-  font-family:"HARRYP" ;
-  display: flex
-  
- 
-  
-  }
-  .harrilogo{
-    
-
-  }
-
-.saludoPag1{
-color:wheat;
-font-family: 'Fontdiner Swanky', cursive;
-text-align:center;
-font-size: 25px;
-position: absolute;
-top: 305px;
-left: 120px;
-
-}
-.HedwigPresentacion{
-  color:rgb(250, 250, 246);
-  font-family: 'Fontdiner Swanky', cursive;
-  font-size: 22px;
-  position:relative;
-  top: 350px;
-  left: 380px;
-  
-  
-}
-.inputName{
-
-  border:2px solid rgb(30, 238, 238);
-	font-size:20px;;
-	padding:.25em .5em .3125em;
-	color:rgb(34, 236, 236,.8);
-	border-radius:.25em;
-	background:transparent;
-  transition:all .100s;
-  font-family: 'Fontdiner Swanky', cursive;
-  width: 400px;
-  text-align: center;
-  height: 50px;
-  position: relative;
-  left: 20px;
-	
-}
-.HedwigInstruccion{
-  color: azure;
-  font-family: 'Fontdiner Swanky', cursive;
-  font-size: 20px;
-  position: relative;
-  left: 650px;
-  top: 480px;
-   
-}
-.buttonAlohomora{
-  background-color: rgb(24, 22, 22,0.9);
-  border: 1px solid  rgb(30, 238, 238,0.5);
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: block;
-  font-size: 36px;
-  margin: 4px 2px;
-  cursor: pointer;
-  font-family:"HARRYP" ;
-  width: 150px;
-  margin-right: 20px;
-      
-}
-button:hover{
-  background:  rgb(30, 238, 238,0.3);
-}
-/*paguina2*/
-.saludopag2{
-  color:greenyellow;
-  font-size: 200px;
-  font-family:"HARRYP" ;
-  font-size: 40px;
-  position: relative;
-  top: 100px;
-  
-  text-align: center;
-}
-.hedwigPag2{
-  color: aqua;
-  font-family: 'Fontdiner Swanky', cursive;
-  font-size: 20px;
-  text-align: center;
-  position: relative;
-  top: 150px;
-}
-.logo{
-  justify-content:center;
-  position: relative;
-  top: 230px;
-  left: 510px;
-  
-}
-.hogwarts{
-  position: relative;
-  top:50px;
-  left:400px;
- 
-}
-.logo1{
-  justify-content:center;
-  position: relative;
-  top: 220px;
-  left: 360px;
-}
-.patronum{
-  position: relative;
-  left:500px;
-  top:50px; 
-}
-.logo2{
-  justify-content:center;
-  position: relative;
-  top: 200px;
-  left: 510px;
-}
-.varitas{
-  position: relative;
-  left:400px;
-  top: 30px;
-}
-.logo3{
-  justify-content:center;
-  position: relative;
-  top: 200px;
-  left: 360px;
-}
-.sangre{
-  position: relative;
-  left:500px;
-  top:30px;
-}
-.logo4{
-  justify-content:center;
-  position: relative;
-  top: 200px;
-  left:510px;
-}
-.maestros{
-  position: relative;
-  left:400px;
-  top: 30px;
-}
-
-
 article h3{
   font-family:"HARRYP" ;
   font-size: 40px;
-  color: beige;
+  color: #f7f5b6;
   }
 .titlepag3{
   font-family:"HARRYP" ;
